syntax = "proto3";
package kanthor.controlplane.v1;
option go_package = "github.com/scrapnode/kanthor/controlplane/server/grpc/protos";

import "entities.proto";

service Endpoint {
  rpc List(EndpointListReq) returns (EndpointListRes) {}
  rpc Get(EndpointGetReq) returns (EndpointGetRes) {}
}

message EndpointListReq {
  string cursor = 1;
  string search = 2;
  int32 limit = 3;
  repeated string ids = 4;
  string app_id = 5;
}

message EndpointListRes {
  string cursor = 1;
  repeated EndpointEntity data = 2;
}

message EndpointGetReq {
  string id = 1;
  string app_id = 2;
}

message EndpointGetRes {
  string id = 1;
  int64 created_at = 2;
  int64 updated_at = 3;
  string app_id = 4;
  string name = 5;
  string method = 6;
  string uri = 7;
  repeated EndpointRuleEntity rules = 8;
}